[gd_scene load_steps=27 format=3 uid="uid://cg0qlayed7ifb"]

[ext_resource type="Script" path="res://Data/Player/player.gd" id="1_pm522"]
[ext_resource type="Texture2D" uid="uid://c6ada66obwfku" path="res://BugAssets/Sprites/Player/wormsprites.png" id="2_j46vm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqei6"]
size = Vector2(16, 16)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mj1fa"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_apiom"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f05yg"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_myyvk"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_w1wrr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_mj1fa")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_apiom")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_f05yg")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_myyvk")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o31j6"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w2737"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7g81w"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wd5pt"]
animation = &"walk_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dojk1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_o31j6")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_w2737")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_7g81w")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_wd5pt")
blend_point_3/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oyix0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eanfa"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vluvn"]
states/End/position = Vector2(461, 171)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_w1wrr")
states/Idle/position = Vector2(198, 171)
states/Start/position = Vector2(75, 171)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_dojk1")
states/Walk/position = Vector2(319, 171)
transitions = ["Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_oyix0"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_eanfa")]
graph_offset = Vector2(-286, 47)

[sub_resource type="Animation" id="Animation_6dbj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5nfjt"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i0xcp"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_n1yr6"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_8s27v"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_8npeb"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2]
}

[sub_resource type="Animation" id="Animation_xcd0s"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 9, 11]
}

[sub_resource type="Animation" id="Animation_ttfbx"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 6, 8]
}

[sub_resource type="Animation" id="Animation_1jm4w"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 3, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8m5nx"]
_data = {
"RESET": SubResource("Animation_6dbj4"),
"idle_down": SubResource("Animation_5nfjt"),
"idle_left": SubResource("Animation_i0xcp"),
"idle_right": SubResource("Animation_n1yr6"),
"idle_up": SubResource("Animation_8s27v"),
"walk_down": SubResource("Animation_8npeb"),
"walk_left": SubResource("Animation_xcd0s"),
"walk_right": SubResource("Animation_ttfbx"),
"walk_up": SubResource("Animation_1jm4w")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("PlayerCamera", "sprDefault")]
z_index = 1
collision_layer = 5
script = ExtResource("1_pm522")
PlayerCamera = NodePath("PlayerCamera")
sprDefault = NodePath("PlayerSprite2D")

[node name="PlayerCamera" type="Camera2D" parent="."]
z_index = 3
zoom = Vector2(5, 5)

[node name="InteractionRay" type="RayCast2D" parent="."]
z_index = 1
position = Vector2(-7.62939e-06, 1.90735e-06)
target_position = Vector2(0, 16)
collision_mask = 2

[node name="CollisionRay" type="RayCast2D" parent="."]
z_index = 2
target_position = Vector2(0, 16)

[node name="BaseHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pqei6")

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_j46vm")
hframes = 12

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_vluvn")
anim_player = NodePath("AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.000798106, -0.00529099)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationTree"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8m5nx")
}
